# cargo-pvm-contract

./: .gitignore  CLAUDE.md  Cargo.toml  PRD.md  README.md  opencode.json  opencode.jsonc
crates/cargo-pvm-contract/: Cargo.toml
crates/cargo-pvm-contract-builder/: Cargo.toml
crates/cargo-pvm-contract-builder/src/: abi.rs  lib.rs
crates/cargo-pvm-contract-extrinsics/: Cargo.toml
crates/cargo-pvm-contract-extrinsics/src/: balance.rs  call.rs  contract_info.rs  error.rs  events.rs  extrinsic_calls.rs  extrinsic_opts.rs  instantiate.rs  lib.rs  map_account.rs  pallet_revive_primitives.rs  remove.rs  rpc.rs  upload.rs
crates/cargo-pvm-contract/src/: build.rs  encode_decode.rs  extrinsics.rs  main.rs  scaffold.rs  test.rs
crates/cargo-pvm-contract/templates/scaffold/: build.rs.txt  cargo_toml.txt  contract_dsl.rs.txt  contract_macro.rs.txt
crates/cargo-pvm-contract/tests/: test_cmd.rs
crates/cargo-pvm-contract/tests/fixtures/: no_contract_macro.rs
crates/pvm-contract-benchmarks/: Cargo.toml  README.md
crates/pvm-contract-benchmarks/reports/: encoding-benchmarks.md  macro-vs-builder.md
crates/pvm-contract-benchmarks/scripts/: regenerate-reports.sh
crates/pvm-contract-benchmarks/src/: lib.rs
crates/pvm-contract-builder-dsl/: Cargo.toml
crates/pvm-contract-builder-dsl/contracts/: fibonacci_builder.rs  multi_builder.rs  mytoken_builder.rs
crates/pvm-contract-builder-dsl/src/: lib.rs
crates/pvm-contract-builder-dsl/tests/: mock_dispatch.rs
crates/pvm-contract-core/: Cargo.toml
crates/pvm-contract-core/src/: call.rs  lib.rs
crates/pvm-contract-e2e-tests/: Cargo.toml
crates/pvm-contract-e2e-tests/src/: anvil.rs  build.rs  cast.rs  dev_node.rs  lib.rs  substrate_client.rs
crates/pvm-contract-e2e-tests/tests/: build_tests.rs  e2e_tests.rs  expected_mytoken_abi.json  extrinsics_e2e_tests.rs  integration_tests.rs
crates/pvm-contract-macros/: Cargo.toml
crates/pvm-contract-macros/src/: lib.rs  solidity.rs  utils.rs
crates/pvm-contract-macros/src/abi_import/: ctxt.rs  mod.rs  parse.rs
crates/pvm-contract-macros/src/codegen/: abi_gen.rs  contract.rs  decode.rs  dispatch.rs  encode.rs  method.rs  mod.rs  sol_error.rs  sol_event.rs  sol_storage.rs  sol_type.rs  storage_layout.rs
crates/pvm-contract-macros/src/signature/: mod.rs  parser.rs  selector.rs  types.rs
crates/pvm-contract-macros/tests/: abi_output.rs  contract_packed_fields.rs  derive_sol_type_decode_overflow.rs  derive_sol_type_encoding.rs  derive_sol_type_storage.rs  derive_sol_type_vec.rs  lazyslot_transition.rs  mapping_of_storage_struct.rs  native_cross_contract_call.rs  native_e2e_token.rs  native_method_tests.rs  native_non_reentrant.rs  native_route_dispatch.rs  native_with_host.rs  sol_error_derive.rs  sol_event_derive.rs  solc_differential.rs  storage_composition.rs  trybuild.rs  type_alias_resolution.rs
crates/pvm-contract-macros/tests/test_abi_contract/: Cargo.toml  abi_constructor_no_params.json  abi_constructor_payable.json  abi_constructor_with_params.json  abi_custom_type_method.json  abi_dynamic_custom_return.json  abi_host_api_calls.json  abi_multi_method.json  abi_nested_custom_type.json  abi_storage_layout_composed.json  abi_storage_layout_mixed.json  abi_storage_layout_vec.json
crates/pvm-contract-macros/tests/ui/: constructor_no_receiver.rs  constructor_no_receiver.stderr  constructor_with_ref_self.rs  constructor_with_ref_self.stderr  derive_nested_struct_field_rejected.rs  derive_nested_struct_field_rejected.stderr  derive_too_many_slots_with_dynamic.rs  derive_too_many_slots_with_dynamic.stderr  explicit_slot_overlap_multi_word.rs  explicit_slot_overlap_multi_word.stderr  explicit_slot_overlap_two_multi_word.rs  explicit_slot_overlap_two_multi_word.stderr  explicit_slot_sub_word_rejected.rs  explicit_slot_sub_word_rejected.stderr  non_reentrant_on_constructor.rs  non_reentrant_on_constructor.stderr  non_reentrant_on_pure.rs  non_reentrant_on_pure.stderr  payable_on_no_receiver_method.rs  payable_on_no_receiver_method.stderr  payable_on_ref_self_method.rs  payable_on_ref_self_method.stderr  receive_duplicate.rs  receive_duplicate.stderr  receive_returns_value.rs  receive_returns_value.stderr  receive_takes_self.rs  receive_takes_self.stderr  receive_with_args.rs  receive_with_args.stderr  receive_with_payable.rs  receive_with_payable.stderr  sol_nonpayable_rust_has_payable_attr.rs  (+9 more)
crates/pvm-contract-sdk/: Cargo.toml
crates/pvm-contract-sdk/src/: lib.rs
crates/pvm-contract-types/: Cargo.toml
crates/pvm-contract-types/benches/: encoding.rs
crates/pvm-contract-types/proptest-regressions/: tests.txt
crates/pvm-contract-types/src/: abi_gen.rs  alloc_types.rs  const_keccak.rs  host.rs  i256.rs  layout.rs  lib.rs  mock_host.rs  reentrancy.rs  revert_string.rs  revert_string_alloc.rs  storage_codec.rs  tests.rs
crates/pvm-solc-differential/: Cargo.toml
crates/pvm-solc-differential/src/: common.rs  lib.rs  storage.rs
crates/pvm-storage/: Cargo.toml
crates/pvm-storage/src/: lib.rs  tests.rs
examples/example-mytoken/: Cargo.toml
examples/example-mytoken/src/: example-mytoken-alloy-alloc.rs  example-mytoken-dsl-no-alloc.rs  example-mytoken-macro-bump-alloc.rs  example-mytoken-macro-no-alloc.rs  example-mytoken-macro-no-sol.rs  example-mytoken-macro-pico-alloc.rs  example-mytoken-macro-storage.rs
examples/test-contracts/: CallerCheck.sol  Cargo.toml  CompositeTypes.sol  ConstructorArgs.sol  DelegateFlipper.sol  DynamicTypes.sol  ErrorCaller.sol  ErrorHandling.sol  Events.sol  Flipper.sol  FlipperCallAlloy.sol  MultiMethod.sol  Payable.sol  PointAdder.sol  PointAdderCall.sol  Receive.sol  ReceiveDsl.sol  ReturnValues.sol  StorageTypes.sol
examples/test-contracts/src/: caller-check.rs  composite-types.rs  constructor-args.rs  dynamic-types.rs  error-handling.rs  error_caller.rs  events.rs  flipper.rs  flipper_call.rs  flipper_delegate.rs  flipper_instantiate.rs  multi-method.rs  payable.rs  point_adder.rs  point_adder_call.rs  receive.rs  receive_dsl.rs  reentrancy_attacker.rs  reentrancy_guard.rs  return-values.rs  storage-types.rs
specs/: abi.md  (+6 more)
(+64 files in other folders)
