[workspace]
members = [
    "crates/cargo-pvm-contract",
    "crates/cargo-pvm-contract-builder",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/paritytech/cargo-pvm-contract"

[workspace.dependencies]
anyhow = "1.0"
askama = "0.12"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
include_dir = "0.7"
log = "0.4"
polkavm-linker = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
convert_case = "0.6"
toml_edit = "0.22"
inquire = "0.7"
