[workspace]
members = [
    "crates/cargo-pvm-contract",
    "crates/cargo-pvm-contract-builder",
    "crates/pvm-contract-macros",
    "crates/pvm-contract-types",
    "crates/pvm-contract-core",
    "crates/pvm-contract-sdk",
    "crates/pvm-bump-allocator",
    "crates/pvm-contract-benchmarks",
    "crates/pvm-contract-builder-dsl",
    "crates/pvm-storage",
    "crates/pvm-solc-differential",
    "crates/pvm-contract-e2e-tests",
    "crates/cargo-pvm-contract-extrinsics",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/paritytech/cargo-pvm-contract"

[workspace.dependencies]
anyhow = "1.0"
askama = "0.12"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
include_dir = "0.7"
log = "0.4"
polkavm-linker = "0.35.0"
polkavm-derive = "0.35.0"
ruint = { version = "1.17", default-features = false }
alloy-core = { version = "1.5", default-features = false, features = [
    "sol-types",
    "json",
] }
pallet-revive-uapi = { version = "0.15", default-features = false }
# Rust EVM, used only by the `pvm-solc-differential` test crate to execute
# solc bytecode as the storage-representation ground truth.
revm = "40"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
const_format = { version = "0.2", default-features = false }
keccak-const = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }
convert_case = "0.6"
toml_edit = "0.22"
trybuild = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
syn-solidity = { version = "1.5" }
proc-macro2 = "1.0"
inquire = "0.7"
