[package]
name = "cargo-pvm-contract-builder"
description = "Build helper for PolkaVM contract bytecode."
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
polkavm-linker = { workspace = true }
pvm-contract-types = { path = "../pvm-contract-types", default-features = false }
toml_edit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
