[package]
name = "cargo-pvm-contract"
description = "A Cargo subcommand to create and build PVM smart contracts."
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
include = [
    "src/**",
    "templates/**",
    "Cargo.toml",
]

[[bin]]
name = "cargo-pvm-contract"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
include_dir = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
inquire = { workspace = true }
askama = { workspace = true }
polkavm-linker = { workspace = true }
convert_case = { workspace = true }
cargo-pvm-contract-builder = { path = "../cargo-pvm-contract-builder" }
tiny-keccak = { workspace = true }
hex = "0.4"
alloy-core = { version = "1.5", features = ["dyn-abi"] }
cargo-pvm-contract-extrinsics = { path = "../cargo-pvm-contract-extrinsics" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
subxt = "0.44"
subxt-signer = { version = "0.44", features = ["subxt", "sr25519"] }
sp-core = { version = "38.0", default-features = false }
url = { version = "2.5" }

[dev-dependencies]
assert_cmd = "2.0"
expect-test = { version = "1.5.1" }
predicates = "3.1"
tempfile = "3.10"
toml_edit = { workspace = true }
