[package]
name = "pvm-contract-builder-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Builder pattern DSL for PVM smart contracts (no proc macros)"

[dependencies]
pvm-contract-types = { path = "../pvm-contract-types" }
pallet-revive-uapi = { workspace = true, default-features = false }
polkavm-derive = { workspace = true }
ruint = { version = "1.17", default-features = false }

[features]
default = []
alloc = ["pvm-contract-types/alloc"]
# Host-only: pulls in `pvm-contract-types/std`, which exposes `MockHost` for
# unit tests. Never enabled for the on-chain (no_std) build.
std = ["alloc", "pvm-contract-types/std"]

[dev-dependencies]
pvm-contract-types = { path = "../pvm-contract-types", features = ["std"] }
