[package]
name = "pvm-contract-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for PVM smart contracts"

[lib]
proc-macro = true

[features]
default = []
abi-reflection = ["pvm-contract-types/abi-reflection"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
tiny-keccak.workspace = true
pvm-contract-types = { path = "../pvm-contract-types" }

[dev-dependencies]
ruint = { version = "1.17", default-features = false }
serde_json = { workspace = true }
pvm-contract-types = { path = "../pvm-contract-types", features = ["alloc"] }
