[package]
name = "pvm-contract-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for PVM smart contracts"

[lib]
proc-macro = true

[features]
default = []
abi-gen = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
syn-solidity = { version = "1.5" }
alloy-json-abi = { version = "1.5" }
keccak-const.workspace = true
pvm-contract-types = { path = "../pvm-contract-types" }
pvm-contract-core = { path = "../pvm-contract-core" }
serde_json = { workspace = true }
const-hex = { version = "^1" }
macro-string = { version = "0.2" }

[dev-dependencies]
ruint = { workspace = true, default-features = false }
serde_json = { workspace = true }
alloy-core = { version = "1.5", features = ["sol-types"] }
pvm-contract-types = { path = "../pvm-contract-types", features = ["alloc"] }
pvm-contract-sdk = { path = "../pvm-contract-sdk", features = ["alloc"] }
proptest = "1"
expect-test = { version = "1.5.1" }
prettyplease = { version = "0.2" }
