[package]
name = "pvm-contract-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ABI encoding/decoding traits for PVM smart contracts"

[dependencies]
ruint = { version = "1.17", default-features = false }

[dev-dependencies]
alloy-core = { version = "1.5", features = ["sol-types"] }
pvm-contract-macros = { path = "../pvm-contract-macros" }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
alloc = []
abi-reflection = ["alloc"]

[[bench]]
name = "encoding"
harness = false
