[package]
name = "pvm-contract-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ABI encoding/decoding traits for PVM smart contracts"

[dependencies]
ruint = { workspace = true, default-features = false }
const_format = { workspace = true, default-features = false }
keccak-const.workspace = true
pallet-revive-uapi = { workspace = true, default-features = false }

[dev-dependencies]
alloy-core = { workspace = true, features = ["sol-types"] }
pvm-contract-macros = { path = "../pvm-contract-macros" }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
alloc = []
std = ["alloc"]

[[bench]]
name = "encoding"
harness = false
