[workspace]

[package]
name = "example-mytoken"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[[bin]]
name = "example-mytoken-macro-pico-alloc"
path = "src/example-mytoken-macro-pico-alloc.rs"

[[bin]]
name = "example-mytoken-macro-bump-alloc"
path = "src/example-mytoken-macro-bump-alloc.rs"

[[bin]]
name = "example-mytoken-macro-no-alloc"
path = "src/example-mytoken-macro-no-alloc.rs"

[[bin]]
name = "example-mytoken-macro-no-sol"
path = "src/example-mytoken-macro-no-sol.rs"

[[bin]]
name = "example-mytoken-macro-storage"
path = "src/example-mytoken-macro-storage.rs"

[[bin]]
name = "example-mytoken-dsl-no-alloc"
path = "src/example-mytoken-dsl-no-alloc.rs"

[[bin]]
name = "example-mytoken-alloy-alloc"
path = "src/example-mytoken-alloy-alloc.rs"

[dependencies]
pvm-contract-sdk = { path = "../../crates/pvm-contract-sdk" }
polkavm-derive = { version = "0.34.0" }  # required by proc macro generated code
pvm-contract-macros = { path = "../../crates/pvm-contract-macros" }  # SolError derive used by DSL binary
pvm-contract-builder-dsl = { path = "../../crates/pvm-contract-builder-dsl" }
alloy-core = { version = "1.5", default-features = false, features = ["sol-types"] }
picoalloc = { version = "5", default-features = false }
pvm-bump-allocator = { path = "../../crates/pvm-bump-allocator" }

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = false
