[workspace]

[package]
name = "test-contracts"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
build = "build.rs"

[[bin]]
name = "flipper"
path = "src/flipper.rs"

[[bin]]
name = "storage-types"
path = "src/storage-types.rs"

[[bin]]
name = "return-values"
path = "src/return-values.rs"

[[bin]]
name = "caller-check"
path = "src/caller-check.rs"

[[bin]]
name = "error-handling"
path = "src/error-handling.rs"

[[bin]]
name = "events"
path = "src/events.rs"

[[bin]]
name = "multi-method"
path = "src/multi-method.rs"

[[bin]]
name = "dynamic-types"
path = "src/dynamic-types.rs"

[[bin]]
name = "composite-types"
path = "src/composite-types.rs"

[[bin]]
name = "constructor-args"
path = "src/constructor-args.rs"

[dependencies]
pvm-contract-macros = { path = "../../crates/pvm-contract-macros" }
pvm-contract-types = { path = "../../crates/pvm-contract-types", features = ["alloc"] }
pallet-revive-uapi = { version = "0.10", default-features = false }
polkavm-derive = { version = "0.31.0" }
ruint = { version = "1.17", default-features = false }
picoalloc = { version = "5", default-features = false }

[features]
abi-gen = []

[build-dependencies]
cargo-pvm-contract-builder = { path = "../../crates/cargo-pvm-contract-builder" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = false
