[workspace]

[package]
name = "test-contracts"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
build = "build.rs"

[[bin]]
name = "flipper_call"
path = "src/flipper_call.rs"

[[bin]]
name = "point_adder_call"
path = "src/point_adder_call.rs"

[[bin]]
name = "point_adder"
path = "src/point_adder.rs"

[[bin]]
name = "flipper_delegate"
path = "src/flipper_delegate.rs"

[[bin]]
name = "reentrancy_guard"
path = "src/reentrancy_guard.rs"

[[bin]]
name = "reentrancy_attacker"
path = "src/reentrancy_attacker.rs"

[[bin]]
name = "error_caller"
path = "src/error_caller.rs"

[[bin]]
name = "flipper_instantiate"
path = "src/flipper_instantiate.rs"

[[bin]]
name = "flipper"
path = "src/flipper.rs"

[[bin]]
name = "storage-types"
path = "src/storage-types.rs"

[[bin]]
name = "return-values"
path = "src/return-values.rs"

[[bin]]
name = "caller-check"
path = "src/caller-check.rs"

[[bin]]
name = "error-handling"
path = "src/error-handling.rs"

[[bin]]
name = "events"
path = "src/events.rs"

[[bin]]
name = "multi-method"
path = "src/multi-method.rs"

[[bin]]
name = "dynamic-types"
path = "src/dynamic-types.rs"

[[bin]]
name = "composite-types"
path = "src/composite-types.rs"

[[bin]]
name = "constructor-args"
path = "src/constructor-args.rs"

[[bin]]
name = "payable"
path = "src/payable.rs"

[[bin]]
name = "receive"
path = "src/receive.rs"

[[bin]]
name = "receive_dsl"
path = "src/receive_dsl.rs"

[dependencies]
pvm-contract-sdk = { path = "../../crates/pvm-contract-sdk", features = [
    "alloc",
] }
pvm-contract-builder-dsl = { path = "../../crates/pvm-contract-builder-dsl" }
polkavm-derive = { version = "0.35.0" } # required by proc macro generated code
picoalloc = { version = "5", default-features = false }

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[build-dependencies]
cargo-pvm-contract-builder = { path = "../../crates/cargo-pvm-contract-builder" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = false
